--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 
-
+@font-face {
+  font-family: Abel-regular;
+  src: local('Abel-regular'), url(./fonts/Abel/Abel-Regular.ttf) format('truetype');
+}
 
 @font-face {
   font-family: Jakarta-regular;
@@ -145,20 +148,23 @@ body{
 
 .contact-container{
   border: 2px solid yellow;
-  height: auto;
+  height: fit-content;
   display: flex;
   justify-content: center;
   cursor: default;
-
 }
 .contact-wrap{
   width: 90%;
+  height: fit-content;
+  position: relative;
+  padding-bottom: 50px;
 }
 .contact-header{
   text-align: center;
   font-family: Jakarta-semi;
   font-size: 26px;
   color: #000000;
+
 }
 .contact-desc{
   text-align: center;
@@ -171,17 +177,21 @@ body{
   margin-top: 20px;
 }
 .contact-team{
-  border: 2px solid red;
-  height: auto;
+  /* border: 2px solid red; */
+  height: fit-content;
   display: flex;
   flex: 2;
   margin-top: 50px;
+  position: relative;
 }
 .team{
   flex: 1;
 }
+.t-step ul{
+  padding-left: 30px;
+}
 .team-desc{
-  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .desc-wrap{
   display: flex;
@@ -208,12 +218,117 @@ body{
 .t-header{
   color: #CCCCCE;
   font-family: Jakarta-semi;
-  font-size: 18px;
+  font-size: 28px;
 }
 .t-text{}
 .contact-form{
-  border: 2px solid green;
+  /* border: 2px solid green; */
   flex: 1;
+  position: relative;
+  height: inherit;
+}
+.form-1{
+  border: 2px solid black;
+  padding-left: 10%;
+  padding-right: 10%;
+  background-color: #FFFFFF;
+  height: 95%;
+  border: 1px solid #E3E3E3;
+  margin-bottom: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.f-name{
+  border: 2px solid #F1F1F4;
+  width: 100%;
+  height: 94px;
+  border-radius: 8px;
+  position: inherit;
+  margin-bottom: 30px;
+  background-color: #FCFCFD;
+}
+
+.f-message{
+  border: 2px solid #F1F1F4;
+  width: 100%;
+  height: 200px;
+  border-radius: 8px;
+  position: inherit;
+  padding-bottom: 20px;
+  background-color: #FCFCFD;
+}
+.f-name-label{
+  height: fit-content;
+  width: fit-content;
+  font-size: 16px;
+  font-family: Jakarta-regular;
+  color: #808080;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+}
+textarea{
+  resize: none;
+  height: 150px;
+  width: inherit;
+  box-sizing: border-box;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing: border-box;
+  font-size: 18px;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: hidden;
+  border: none;
+  outline: none;
+  background-color: #FCFCFD;
+}
+.f-name-input{
+  height: 50px;
+  width: 100%;
+}
+.f-name-input input{
+  width: 100%; 
+  background-color: #FCFCFD;
+  box-sizing: border-box;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing: border-box;
+  font-size: 18px;
+  font-family: Jakarta-regular;
+  color: #000000;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  outline: none;
+}
+.contact-btn-wrap{
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  margin-top: 50px;
+}
+.contact-btn{
+  width: 300px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-family: Abel-regular;
+  border-radius: 30px;
+  background-color: #8407CC;
+  color: #FCFCFD;
+}
+.form-2{
+  border-right: 2px solid #CCCACA;
+  height: 100%;
+  width: 600px;
+  right: 0;
+  position: absolute;
+  border-radius: 0px 0px 0px 30px;
+  background-color: #FAFAFA;
+  z-index: -1;
+  bottom: 0;
 }
 .t-desc{
   color: #CCCCCE;
@@ -222,8 +337,7 @@ body{
   margin-top: 20px;
   line-height: 30px;
 }
-.form-1{}
-.form-2{}
+
 .footer-container{
   border: 2px solid blue;
   height: auto;
