--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
 }
 
 @font-face {
+  font-family: Jakarta-extra;
+  src: local('Jakarta-extra'), url(./fonts/plus_jakarta_plus/PlusJakartaSans-ExtraBold.ttf) format('truetype');
+}
+
+
+@font-face {
   font-family: Jakarta-regular;
   src: local('Jakarta-regular'), url(./fonts/plus_jakarta_plus/PlusJakartaSans-Regular.ttf) format('truetype');
 }
@@ -12,6 +18,11 @@
 @font-face {
   font-family: Jakarta-semi;
   src: local('Jakarta-semi'), url(./fonts/plus_jakarta_plus/PlusJakartaSans-SemiBold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: Jakarta-medium;
+  src: local('Jakarta-medium'), url(./fonts/plus_jakarta_plus/PlusJakartaSans-Medium.ttf) format('truetype');
 }
 
 @font-face {
@@ -28,21 +39,243 @@ body{
   overflow-x: hidden;
 }
 .home-container{
-  border: 1px solid red;
-  height: 100vh;
+  height: auto;
   margin-top: 12vh;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 100px;
+  padding-top: 30px;
+}
+.home-wrap{
+  width: 90%;
+  background: url('./background/home.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.m-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.m-wrap{
+  width: 1000px;
+  box-shadow: 0px 20px 60px 0px #0000000d;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.m-header{
+  font-family: Jakarta-bold;
+  font-size: 64px;
+  width: fit-content;
+  text-align: center;
+  color: #420466;
+}
+.m-desc{
+  width: 100%;
+  font-family: Jakarta-medium;
+  font-size: 18px;
+  color: #55555C;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.user-container{
+  position: relative;
+  align-items: center;
+  display: flex;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 50px;
+}
+.badge-wrap{
+  display: flex;
+  height: fit-content;
+}
+.badge{
+  height: 76px;
+  width: 251px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F2F2F3;
+  border-radius: 12px;
+}
+.badge-icons{
+  position: relative;
+  display: flex;
+}
+.bicon-1{
+  width: 38px;
+  height: 38px;
+  margin-left: -15px;
+}
+.bicon-1 img{
+  width: 100%;
+  height: 100%;
+}
+.bicon-2{
+  margin-left: -15px;
+  width: 38px;
+  height: 38px;
+}
+.bicon-2 img{
+  width: 100%;
+  height: 100%;
+}
+.bicon-3{
+  margin-left: -15px;
+  width: 38px;
+  height: 38px;
+}
+.bicon-3 img{
+  width: 100%;
+  height: 100%;
+}
+.bicon-4{
+  margin-left: -15px;
+  width: 38px;
+  height: 38px;
+}
+.bicon-4 img{
+  width: 100%;
+  height: 100%;
+}
+.bicon-5{
+  margin-left: -15px;
+  width: 38px;
+  height: 38px;
+}
+.bicon-5 img{
+  width: 100%;
+  height: 100%;
+}
+.badge-numb{
+  width: 54px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  font-family: Jakarta-extra;
+  margin-left: 20px;
+}
+.badge-text-wrap{
+  height: 76px;
+  margin-left: 30px;
+  width: fit-content;
+}
+.bt-1{
+  height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  font-size: 18px;
+  font-family: Jakarta-medium;
+  color: #55555C;
+}
+.bt-2{
+  height: 38px;
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: Jakarta-semi;
+  color: #000000;
+}
+.badge-text{
+}
+.sales-btn-wrap{
+  display: flex;
+  width: fit-content;
+  position: absolute;
+  right: 0;
+}
+.main{
+
+  height: 527px;
+  width: 340px;
+}
+.main img{
+
+}
+.white{
+
+  height: 160px;
+  width: 263px;
+  position: absolute;
+  left: -100px;
+}
+.white img{
+
+}
+.green{
+  left: -100px;
+  height: 177px;
+  width: 246px;
+  position: absolute;
+  bottom: 80px;
+}
+.green img{
+
+}
+.purple{
+  height: 172px;
+  width: 282px;
+  position: absolute;
+  right: 0;
+  bottom: 150px;
+}
+.purple img{
+
+}
+
+.cc{
+  height: 187px;
+  width: 308px;
+  position: absolute;
+  right: -80px;
+}
+.cc img{
+}
+.sales-btn{
+
+}
+
+.home-cards-wrap{
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  height: 527px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-top: 100px;
+  background-color: #FFFFFF;
 }
 .about-container{
-  border: 1px solid blue;
   height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.sub-container{
+
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.sub-wrap{
+
+  width: 90%;
+}
 .about{
   width: 100px;
   height: 100px;
-  border: 2px solid black;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -137,17 +370,220 @@ body{
   font-family: Jakarta-bold;
 }
 
-.cards-container{
-  border: 2px solid red;
-  height: 100vh;
+.card-container{
+
 }
 .choose-container{
-  border: 2px solid green;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  cursor: default;
+
+}
+.choose-wrap{
+  width: 90%;
+  margin-top: 80px;
+
+}
+.choose-header{
+  width: 100%;
+  text-align: center;
+}
+.choose-main{
+  width: 100%;
+  text-align: center;
+  font-family: Jakarta-bold;
+  font-size: 28px;
+  color: #000000;
+}
+.choose-desc{
+  font-family: Jakarta-semi;
+  font-size: 22px;
+  color: #0000FF;
+  margin-top: 10px;
+}
+.choose-c-wrap{
+  display: flex;
+  margin-top: 50px;
+}
+.choose-c-1{
+  margin-right: 20px;
+  width: 406px;
+  border: 2px solid #F2F4F7;
+  height: 345px;
+  padding-left: 20px;
+  padding-top: 30px;
+  border-radius: 12px;
+}
+.choose-c-2{
+  margin-right: 20px;
+  width: 406px;
+  border: 2px solid #F2F4F7;
+  height: 345px;
+  padding-left: 20px;
+  padding-top: 30px;
+  border-radius: 12px;
+}
+.choose-c-3{
+  border: 2px solid #F2F4F7;
+  width: 406px;
+  height: 345px;
+  padding-left: 20px;
+  padding-top: 30px;
+  border-radius: 12px;
+}
+.choose-c-icon{
+  width: 56px;
+  height: 56px;
+  border-radius: 8px;
+  background-color: #F9F0FE;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.choose-c-icon img{
+  width: 30px;
+  height: 30px;
+}
+.choose-c-header{
+  font-family: Jakarta-semi;
+  font-size: 24px;
+  color: #022623;
+  margin-top: 20px;
+}
+
+.choose-c-desc{
+  font-family: Jakarta-regular;
+  font-size: 18px;
+  color: #808080;
+  line-height: 180%;
+  margin-top: 20px;
+  width: 350px;
+}
+.pay-container{
+  height: 277px;
+  background-image: linear-gradient(#7006AD, #420466);
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+.pay-wrap{
+  position: relative;
+  padding-left: 2.5%;
+  height: 277px;
+  padding-right: 2.5%;
+
+}
+.pay-btn{
+  width: 91px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  font-family: Jakarta-medium;
+  font-size: 14px;
+  border: 1px solid #9008DE;
+  color: #9008DE;
+
+}
+.pay-header{
+  width: 50%;
+  font-family: Jakarta-semi;
+  font-size: 42px;
+  margin-top: 50px;
+  color: #FFFFFF;
+}
+.pay-icons{
+  position: absolute;
+  right: 0;
+  width: 50%;
+  top: 0;
+  height: 277px;
+  padding-right: 2.5%;
+}
+.pay-1{
+  display: flex;
+  height: fit-content;
+  position: relative;
+  align-items: center;
+  height: 130px;
+}
+.pay-2{
+  display: flex;
+  position: relative;
+  height: 130px;
+  justify-content: center;
+  padding-top: 10px;
+}
+.sp{
+  width: 256px;
+  height: 80px;
+  position: absolute;
+  left: 0;
+  top: 10px;
+}
+.sp img{
+  width: 100%;
+  height: 100%;
+}
+
+.yt{
+  width: 254px;
+  height: 58px;
+  margin-right: 20px;
+  position: absolute;
+  left: 256px;
+  margin-left: 30px;
+
+}
+.yt img{
+  width: 100%;
+  height: 100%;
+}
+
+.app{
+  width: 114px;
+  height: 114px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.app img{
+  width: 100%;
+  height: 100%;
+}
+.gram{
+  width: 128px;
+  height: 128px;
+  position: absolute;
+  bottom: 0;
+  left: 100px;
+}
+.gram img{
+  width: 100%;
+  height: 100%;
+}
+.flix{
+  width: 171px;
+  height: 48px;
+  position: absolute;
+}
+.flix img{
+  width: 100%;
+  height: 100%;
+}
+.angle{
+  width: 104px;
+  height: 112px;
+  position: absolute;
+  right: 120px;
+}
+.angle img{
+  width: 100%;
+  height: 100%;
 }
 
 .contact-container{
-  border: 2px solid yellow;
   height: fit-content;
   display: flex;
   justify-content: center;
@@ -200,25 +636,26 @@ body{
 
 }
 .t-1{
-  height: 50px;
-  width: 50px;
+  height: 60px;
+  width: 60px;
   border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #AAAAAD;
   font-family: Montserrat;
-  font-size: 22px;
+  font-size: 24px;
   background-color: #F2F2F3;
 }
 .team-text{
   align-items: center;
-  margin-left: 20px;
+  margin-left: 40px;
 }
 .t-header{
   color: #CCCCCE;
   font-family: Jakarta-semi;
-  font-size: 28px;
+  font-size: 32px;
+
 }
 .t-text{}
 .contact-form{
@@ -228,7 +665,6 @@ body{
   height: inherit;
 }
 .form-1{
-  border: 2px solid black;
   padding-left: 10%;
   padding-right: 10%;
   background-color: #FFFFFF;
@@ -337,9 +773,549 @@ textarea{
   margin-top: 20px;
   line-height: 30px;
 }
+.unlock-container{
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+  padding-top: 100px;
+}
+.unlock-wrap{
+  width: 90%;
+  display: flex;
+}
+.lock-1{
+  width: 49%;
+  height: auto;
+  border-radius: 64px;
+  background-color: #6A06A3;
+  color: #FFFFFF;
+  padding-bottom: 50px;
+  padding-top: 100px;
+  margin-right: 2%;
+}
+.unlock-head{
+  width: 505px;
+  font-family: Jakarta-extra;
+  font-size: 80px;
+  padding-left: 30px;
+}
+.unlock-image-wrap{
+  height: 327px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  height: 327px;
+}
+.u-image{
+  width: 554px;
+}
+.u-image img{
+  width: 100%;
+  height: 100%;
+}
+.lock-2{
+  width: 49%;
+  height: auto;
+  border-radius: 64px;
+  padding-top: 80px;
+  background-color: #15191D;
+}
 
+.unlock-2-head{
+  width: 90%;
+  font-family: Jakarta-extra;
+  font-size: 68px;
+  padding-left: 5%;
+  padding-right: 5%;
+  color: #FFFFFF;
+}
+
+.u-2-image{
+  width: 554px;
+}
+.u-row-1{
+  display: flex;
+  width: 90%;
+  padding-left: 30px;
+}
+.u-btn-1{
+  width: 151.71px;
+  height: 144.81px;
+  border-radius: 40px;
+  position: absolute;
+  top: 0;
+  left: 5%;
+}
+.u-btn-1 img{
+  width: 100%;
+  height: 100%;
+}
+.u-btn-2{
+  width: 163.98px;
+  height: 156.53px;
+  border-radius: 40px;
+  position: absolute;
+  top: 0;
+  left: 220px;
+}
+.u-btn-3{
+  width: 149.96px;
+  height: 143.14px;
+  border-radius: 40px;
+  position: absolute;
+  top: 0px;
+  right: 5%;
+}
+
+.u-btn-4{
+  width: 157.77px;
+  height: 150.59px;
+  border-radius: 40px;
+  position: absolute;
+  bottom: 0;
+  left: 8%;
+}
+.u-btn-5{
+  width: 156.17px;
+  height: 149.07px;
+  border-radius: 40px;
+  position: absolute;
+  left: 38%;
+  bottom: 0;
+}
+.u-btn-6{
+  width: 156.17px;
+  height: 171.79px;
+  border-radius: 40px;
+  position: absolute;
+  right: 6%;
+  bottom: 0;
+}
+
+
+.u-row-2{
+  display: flex;
+  width: 90%;
+  padding-left: 30px;
+  margin-top: 5px;
+}
+
+.unlock-2-wrap{
+  height: 327px;
+  margin-top: 30px;
+  /* display: flex; */
+  justify-content: center;
+  height: 327px;
+  position: relative;
+}
+.bills-container{
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 100px;
+}
+.bills-wrap{
+  width: 90%;
+}
+.bills-header{
+  width: fit-content;
+  height: fit-content;
+  font-family: Jakarta-extra;
+  font-size: 110px;
+}
+.native-wrap{
+  display: flex;
+  margin-top: 150px;
+}
+.n-1{
+  width: 49%;
+  margin-right: 2%;
+  height: auto;
+  border-radius: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #F1F2F4;
+}
+.n-1-icon-wrap{
+  display: flex;
+  margin-top: 200px;
+}
+
+.n-icon-wrap-2{
+  display: flex;
+}
+.n-1-icon{
+  width: fit-content;
+  height: fit-content;
+  margin-right: 10px;
+}
+.n-1-head{
+  font-family: Jakarta-extra;
+  font-size: 90px;
+  color: #56037C;
+  padding-left: 5%;
+}
+
+.n-2-head{
+  font-family: Jakarta-extra;
+  font-size: 100px;
+  color: #56037C;
+  padding-left: 5%;
+  color: #FFFFFF;
+}
+.n-2{
+  width: 49%;
+  height: auto;
+  border-radius: 40px;
+  padding-top: 60px;
+  line-height: 120px;
+  background-image: linear-gradient(#31FFB4, #56037C);
+
+}
+.c-card-container{
+  height: auto;
+  display: flex;
+  padding-left: 5%;
+  padding-right: 5%;
+  flex-direction: column;
+  padding-bottom: 100px;
+  position: relative;
+  padding-top: 50px;
+}
+.c-card-wrap{
+  width: 100%;
+  height: auto;
+  position: relative;
+  display: flex;
+  margin-top: 50px;
+}
+.c-card-header{
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  font-family: Jakarta-semi;
+  font-size: 42px;
+}
+.span-card{
+  color: #C54000;
+  margin-left: 10px;
+}
+.personalize{
+  width: 450px;
+  position: absolute;
+  top: 330px;
+}
+.p-header{
+  color: #00000A;
+  font-family: Jakarta-semi;
+  font-size: 28px;
+  line-height: 45px;
+}
+.p-list-1-wrap{
+  width: fit-content;
+  display: flex;
+  height: 30px;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+.p-list-2-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 70px;
+  margin-top: 15px;
+}
+.p-list-3-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 120px;
+  margin-top: 15px;
+}
+.p-list-4-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 180px;
+  margin-top: 15px;
+}
+
+.p-list-1{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.p-list-icon{
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.p-list-icon img{
+  width: 100%;
+  height: 100%;
+}
+.p-list-2{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.p-list-3{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.p-list-4{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+  
+}
+.cards-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-left: 100px;
+  height: 100vh;
+}
+.cards{
+  width: fit-content;
+  position: absolute;
+  height: 800px;
+  left: 150px;
+  bottom: 0;
+  top: 10px;
+}
+.card-1{
+  width: 500px;
+  height: fit-content;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+}
+.card-2{
+  width: 500px;
+  height: fit-content;
+  position: absolute;
+  top: 150px;
+  left: 130px;
+  z-index: 2;
+}
+.card-3{
+  width: 500px;
+  height: fit-content;
+  position: absolute;
+  top: 350px;
+  left: 300px;
+  z-index: 1;
+}
+.card-1 img{
+  width: 100%;
+  height: 100%;
+}
+.card-2 img{
+  width: 100%;
+}
+.card-3 img{
+  width: 100%;
+}
+.seamless{
+  position: absolute;
+  right: 0;
+  top: 100px;
+  width: 480px;
+}
+
+.s-header{
+  color: #00000A;
+  font-family: Jakarta-semi;
+  font-size: 28px;
+  line-height: 45px;
+}
+.s-list-1-wrap{
+  width: fit-content;
+  display: flex;
+  height: 30px;
+  align-items: center;
+  margin-top: 20px;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+.s-list-2-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 70px;
+  margin-top: 15px;
+}
+.s-list-3-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 120px;
+  margin-top: 15px;
+}
+.s-list-4-wrap{
+  display: flex;
+  height: 30px;
+  align-items: center;
+  width: fit-content;
+  margin-left: 180px;
+  margin-top: 15px;
+}
+
+.s-list-1{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.s-list-icon{
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.s-list-icon img{
+  width: 100%;
+  height: 100%;
+}
+.s-list-2{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.s-list-3{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.s-list-4{
+  width: fit-content;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  color: #808084;
+  font-family: Jakarta-regular;
+  font-size: 16px;
+  margin-left: 20px;
+}
+
+
+.contact-sales{
+  width: 100%;
+  height: 100px;
+  margin-top: 50px;
+  display: flex;
+  justify-content: end;
+}
+.sales{
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+  background-color: #8407CC;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sales img{
+  width: 50px;
+  height: 20px;
+}
+.c-s{
+  height: 100px;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  color: #000000;
+  font-family: Jakarta-semi;
+  margin-right: 20px;
+}
+.unlimited-container{
+  height: 560px;
+  background-color: #FAFAFA;
+}
+.unlimited-wrap{
+  height: 460px;
+  width: 100%;
+  background-image: url('./background/unlimited.svg');
+}
+.u-desc-wrap{
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  text-align: center;
+  padding-top: 80px;
+  color: #FFFFFF;
+}
+.u-desc{
+  font-family: Jakarta-semi;
+ font-size: 42px;
+ width: 800px;
+}
+.u-btn-wrap{
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.u-btn{
+  width: 145px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Jakarta-bold;
+  background-color: #0000FF;
+  color: #FFFFFF;
+  border-radius: 8px;
+}
 .footer-container{
-  border: 2px solid blue;
   height: auto;
   display: flex;
   justify-content: center;
@@ -462,6 +1438,18 @@ textarea{
   font-family: Jakarta-regular;
 }
 
+#bg{
+  background-color: #8407CC;
+  color: #FFFFFF;
+}
+
+#active-h{
+  color: #000000;
+}
+#active-desc{
+  color: #808084;
+}
+
 @media screen and (max-width: 1020px) and (min-width:50px){
   body{
       margin: 0;
@@ -507,5 +1495,28 @@ textarea{
 
   .contact-team{
     flex-direction: column;
+  }
+  .unlock-wrap{
+    flex-direction: column;
+  }
+  .choose-c-wrap{
+    flex-direction: column;
+  }
+
+  .lock-1{
+    width: 100%;
+  }
+  .lock-2{
+    width: 100%;
+  }
+  .native-wrap{
+    flex-direction: column;
+  }
+  .n-1{
+    width: 100%;
+  }
+
+  .n-2{
+    width: 100%;
   }
 }
