--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,15 @@ body{
   margin: 0;
   overflow-x: hidden;
 }
+@keyframes bounce {
+  from {
+      transform: translate3d(0, 0, 0);
+  }
+
+  to {
+      transform: translate3d(20px, 0, 0);
+  }
+}
 .home-container{
   height: auto;
   margin-top: 12vh;
@@ -288,7 +297,7 @@ body{
   flex: 5;
   position: fixed;
   z-index: 1;
-  background-color: transparent;
+  background-color: #FFFFFF;
   top: 0;
   padding-left: 5%;
   padding-right: 5%;
@@ -393,12 +402,12 @@ body{
   width: 100%;
   text-align: center;
   font-family: Jakarta-bold;
-  font-size: 28px;
+  font-size: 32px;
   color: #000000;
 }
 .choose-desc{
   font-family: Jakarta-semi;
-  font-size: 22px;
+  font-size: 26px;
   color: #0000FF;
   margin-top: 10px;
 }
@@ -598,18 +607,16 @@ body{
 .contact-header{
   text-align: center;
   font-family: Jakarta-semi;
-  font-size: 26px;
+  font-size: 30px;
   color: #000000;
 
 }
 .contact-desc{
   text-align: center;
   font-family: Jakarta-regular;
-  font-size: 20px;
+  font-size: 28px;
   color: #000000;
-  line-height: 30px;
-  padding-left: 15%;
-  padding-right: 15%;
+  line-height: 40px;
   margin-top: 20px;
 }
 .contact-team{
@@ -628,6 +635,7 @@ body{
 }
 .team-desc{
   margin-bottom: 50px;
+  position: relative;
 }
 .desc-wrap{
   display: flex;
@@ -650,7 +658,17 @@ body{
 .team-text{
   align-items: center;
   margin-left: 40px;
+  position: relative;
+
 }
+.side-margin{
+  border: 1px solid red;
+  height: 80vh;
+  position: absolute;
+  left: 30px;
+  z-index: -1;
+}
+
 .t-header{
   color: #CCCCCE;
   font-family: Jakarta-semi;
@@ -1265,6 +1283,10 @@ textarea{
 .sales img{
   width: 50px;
   height: 20px;
+  animation: bounce 0.5s;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+  animation-iteration-count: infinite;
 }
 .c-s{
   height: 100px;
