--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body{
   justify-content: center;
   padding-bottom: 100px;
   padding-top: 30px;
+  background-color: #FFFFFF;
 }
 .home-wrap{
   width: 90%;
@@ -69,7 +70,7 @@ body{
 }
 .m-wrap{
   width: 1000px;
-  box-shadow: 0px 20px 60px 0px #0000000d;
+  box-shadow: 0px 20px 60px 0px #edecec;
   padding-top: 10px;
   padding-bottom: 20px;
 }
@@ -78,7 +79,11 @@ body{
   font-size: 64px;
   width: fit-content;
   text-align: center;
-  color: #420466;
+  background: linear-gradient(to right, #8407CC, #420466);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke: 1px solid #000000;
 }
 .m-desc{
   width: 100%;
