--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,7 @@ body{
   background: linear-gradient(to right, #8407CC, #420466);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke: 1px solid #000000;
+
 }
 .m-desc{
   width: 100%;
@@ -388,11 +387,11 @@ body{
 
 }
 .choose-container{
-  height: 100vh;
+  height: 600px;
   display: flex;
   justify-content: center;
   cursor: default;
-
+  padding-bottom: 50px;
 }
 .choose-wrap{
   width: 90%;
@@ -933,13 +932,14 @@ textarea{
   position: relative;
 }
 .bills-container{
-  height: auto;
+  height: 1300px;
   display: flex;
   justify-content: center;
   padding-bottom: 100px;
 }
 .bills-wrap{
   width: 90%;
+  height: 1300px;
 }
 .bills-header{
   width: fit-content;
@@ -954,10 +954,9 @@ textarea{
 .n-1{
   width: 49%;
   margin-right: 2%;
-  height: auto;
+  height: 800px;
   border-radius: 40px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 60px;
   background-color: #F1F2F4;
 }
 .n-1-icon-wrap{
@@ -989,7 +988,7 @@ textarea{
 }
 .n-2{
   width: 49%;
-  height: auto;
+  height: 800px;
   border-radius: 40px;
   padding-top: 60px;
   line-height: 120px;
@@ -1012,6 +1011,7 @@ textarea{
   position: relative;
   display: flex;
   margin-top: 50px;
+  height: 700px;
 }
 .c-card-header{
   display: flex;
