--- a/src/App.css
+++ b/src/App.css
@@ -597,10 +597,11 @@ body{
 }
 
 .contact-container{
-  height: fit-content;
+  height: 1150px;
   display: flex;
   justify-content: center;
   cursor: default;
+  border: 2px solid red;
 }
 .contact-wrap{
   width: 90%;
@@ -961,16 +962,78 @@ textarea{
 }
 .n-1-icon-wrap{
   display: flex;
-  margin-top: 200px;
+  position: relative;
+  height: 200px;
+  margin-top: 100px;
 }
 
 .n-icon-wrap-2{
   display: flex;
+  position: relative;
+  height: 200px;
 }
-.n-1-icon{
-  width: fit-content;
-  height: fit-content;
+.nf-icon{
+  width: 136px;
+  height: 130px;
   margin-right: 10px;
+  position: absolute;
+  left: 0;
+  top: 20px;
+}
+.ng-icon{
+  width: 147px;
+  height: 140px;
+  margin-right: 10px;
+  position: absolute;
+  left: 136px;
+  top: 0;
+}
+.nt-icon{
+  width: 134px;
+  height: 128px;
+  margin-right: 10px;
+  position: absolute;
+  right: 175px;
+  bottom: 0;
+}
+.ns-icon{
+  width: 134px;
+  height: 128px;
+  margin-right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+}
+.ny-icon{
+  width: 141px;
+  height: 135px;
+  margin-right: 10px;
+  position: absolute;
+  left: 0;
+  top: 30px;
+}
+.nm-icon{
+  width: 140px;
+  height: 134px;
+  margin-right: 10px;
+  position: absolute;
+  left: 141px;
+  top: -20px;
+}
+.ngram-icon{
+  width: 134px;
+  height: 134px;
+  margin-right: 10px;
+  position: absolute;
+  right: 30px;
+}
+.nx-icon{
+  width: 140px;
+  height: 154px;
+  margin-right: 10px;
+  position: absolute;
+  bottom: 0;
+  right: 175px;
 }
 .n-1-head{
   font-family: Jakarta-extra;
