--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
   font-family: Montserrat;
   src: local('Jakarta-bold'), url(./fonts/Montserrat/Montserrat-Bold.ttf) format('truetype');
 }
+*{
+  font: inherit;
+}
 *,
 *::before,
 *::after {
@@ -971,15 +974,15 @@ textarea{
   width: fit-content;
   height: fit-content;
   font-family: Jakarta-extra;
-  font-size: 110px;
+  font-size: 8vw;
 }
 .native-wrap{
   display: flex;
   margin-top: 150px;
 }
 .n-1{
-  width: 49%;
-  margin-right: 2%;
+  width: 49.5%;
+  margin-right: 1%;
   height: 900px;
   border-radius: 40px;
   padding-top: 60px;
@@ -998,63 +1001,63 @@ textarea{
   height: 200px;
 }
 .nf-icon{
-  width: 136px;
-  height: 130px;
+  width: 126px;
+  height: 120px;
   margin-right: 10px;
   position: absolute;
   left: 0;
   top: 20px;
 }
 .ng-icon{
-  width: 147px;
-  height: 140px;
+  width: 137px;
+  height: 130px;
   margin-right: 10px;
   position: absolute;
   left: 136px;
   top: 0;
 }
 .nt-icon{
-  width: 134px;
-  height: 128px;
+  width: 124px;
+  height: 118px;
   margin-right: 10px;
   position: absolute;
   right: 175px;
   bottom: 0;
 }
 .ns-icon{
-  width: 134px;
-  height: 128px;
+  width: 124px;
+  height: 118px;
   margin-right: 10px;
   position: absolute;
   top: 10px;
   right: 30px;
 }
 .ny-icon{
-  width: 141px;
-  height: 135px;
+  width: 131px;
+  height: 125px;
   margin-right: 10px;
   position: absolute;
   left: 0;
   top: 30px;
 }
 .nm-icon{
-  width: 140px;
-  height: 134px;
+  width: 130px;
+  height: 124px;
   margin-right: 10px;
   position: absolute;
   left: 141px;
   top: -20px;
 }
 .ngram-icon{
-  width: 134px;
-  height: 134px;
+  width: 124px;
+  height: 124px;
   margin-right: 10px;
   position: absolute;
   right: 30px;
 }
 .nx-icon{
-  width: 140px;
-  height: 154px;
+  width: 130px;
+  height: 144px;
   margin-right: 10px;
   position: absolute;
   bottom: 0;
@@ -1075,7 +1078,7 @@ textarea{
   color: #FFFFFF;
 }
 .n-2{
-  width: 49%;
+  width: 49.5%;
   height: 900px;
   border-radius: 40px;
   padding-top: 120px;
@@ -1083,7 +1086,7 @@ textarea{
   background-image: linear-gradient(#31FFB4, #56037C);
 }
 .c-card-container{
-  height: auto;
+  height: 1100px;
   display: flex;
   padding-left: 5%;
   padding-right: 5%;
@@ -1094,7 +1097,7 @@ textarea{
 }
 .c-card-wrap{
   width: 100%;
-  height: auto;
+  height: 1000px;
   position: relative;
   display: flex;
   margin-top: 50px;
@@ -1208,42 +1211,43 @@ textarea{
   
 }
 .cards-container{
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   position: relative;
-  margin-left: 100px;
   height: 100vh;
+  width: 100%;
 }
 .cards{
-  width: fit-content;
+  width: inherit;
+  height: inherit;
   position: absolute;
   height: 800px;
-  left: 150px;
   bottom: 0;
   top: 10px;
 }
 .card-1{
-  width: 500px;
+  width: 35vw;
   height: fit-content;
   position: absolute;
   top: 0;
   z-index: 3;
+  left: 250px;
 }
 .card-2{
-  width: 500px;
+  width: 35vw;
   height: fit-content;
   position: absolute;
   top: 150px;
-  left: 130px;
+  left: 350px;
   z-index: 2;
 }
 .card-3{
-  width: 500px;
+  width: 35vw;
   height: fit-content;
   position: absolute;
   top: 350px;
-  left: 300px;
+  left:520px;
   z-index: 1;
 }
 .card-1 img{
