--- a/src/App.css
+++ b/src/App.css
@@ -836,14 +836,14 @@ textarea{
   display: flex;
 }
 .lock-1{
-  width: 49%;
+  width: 49.5%;
   height: 900px;
   border-radius: 64px;
   background-color: #6A06A3;
   color: #FFFFFF;
   padding-bottom: 50px;
   padding-top: 100px;
-  margin-right: 2%;
+  margin-right: 1%;
 }
 .unlock-head{
   width: 505px;
@@ -859,14 +859,14 @@ textarea{
   height: 327px;
 }
 .u-image{
-  width: 554px;
+  width: 90%;
 }
 .u-image img{
   width: 100%;
   height: 100%;
 }
 .lock-2{
-  width: 49%;
+  width: 49.5%;
   height: 900px;
   border-radius: 64px;
   padding-top: 80px;
@@ -876,7 +876,7 @@ textarea{
 .unlock-2-head{
   width: 100%;
   font-family: Jakarta-extra;
-  font-size: 70px;
+  font-size: 5vw;
   padding-left: 5%;
   padding-right: 5%;
   color: #FFFFFF;
@@ -908,7 +908,7 @@ textarea{
   border-radius: 40px;
   position: absolute;
   top: 0;
-  left: 220px;
+  right: 15vw;
 }
 .u-btn-3{
   width: 149.96px;
@@ -975,6 +975,7 @@ textarea{
   height: fit-content;
   font-family: Jakarta-extra;
   font-size: 8vw;
+  border: 2px solid green;
 }
 .native-wrap{
   display: flex;
@@ -1072,13 +1073,14 @@ textarea{
 
 .n-2-head{
   font-family: Jakarta-extra;
-  font-size: 100px;
+  font-size: 7vw;
   color: #56037C;
   padding-left: 5%;
   color: #FFFFFF;
 }
 .n-2{
   width: 49.5%;
+
   height: 900px;
   border-radius: 40px;
   padding-top: 120px;
