--- a/src/App.css
+++ b/src/App.css
@@ -695,7 +695,7 @@ html {
 
 }
 .side-margin{
-  border: 1px solid red;
+  border: 1px solid #01C467;
   height: 80vh;
   position: absolute;
   left: 30px;
